# rakugaki

./: .gitignore  README.md  meson.build
data/: com.github.lainsce.rakugaki.appdata.xml.in  com.github.lainsce.rakugaki.desktop.in  com.github.lainsce.rakugaki.gresource.xml  com.github.lainsce.rakugaki.gschema.xml  meson.build  style.gresource.xml
debian/: changelog  control  copyright  rules
po/: README.md  com.github.lainsce.rakugaki.pot  fr.po  ja.po  nl.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  ja.po  nl.po
src/: Application.vala  MainWindow.vala  meson.build
src/Constants/: AppSettings.vala
src/Widgets/: EditableLabel.vala  UI.vala
